k8s/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-toy-shop
  labels:
    app: go-toy-shop
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: go-toy-shop
  type: ClusterIP
